# listerature

./: .gitignore  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
reading_gist.egg-info/: PKG-INFO  SOURCES.txt
reading_list.egg-info/: PKG-INFO  SOURCES.txt
