[metadata]
name = <timeline>
version = <version number: 0.0.0>
license = <MIT>
description = <Timeline extraction tool>
long_description = file: README.rst
author = <James Gregory>
author_email = <Optional: james.gregory94@hotmail.co.uk>
Classifiers =

[options]
packages = find:
packages_dir =
	     =src
include_package_data = True
install_requires =

[options.packages.find]
where=src