[metadata]
name = reading-list
version = 0.0.1
license = "MIT license"
description = Reading list generator
long_description = file: README.rst
author = James Gregory
author_email = james.gregory94@hotmail.co.uk
packages = find:
packages_dir = 
	=src
include_package_data = True
install_requires =

[options.packages.find]
where=src
